--- a/laundry/package.json
+++ b/laundry/package.json
@@ -17,6 +17,7 @@
     "expo": "~49.0.15",
     "expo-location": "~16.1.0",
     "expo-status-bar": "~1.6.0",
+    "firebase": "^10.5.2",
     "moment-jalaali": "^0.10.0",
     "react": "18.2.0",
     "react-native": "0.72.6",
@@ -26,7 +27,9 @@
     "react-redux": "^8.1.3"
   },
   "devDependencies": {
-    "@babel/core": "^7.20.0"
+    "@babel/core": "^7.20.0",
+    "metro-react-native-babel-preset": "^0.77.0",
+    "react-native-dotenv": "^3.4.9"
   },
   "private": true
 }
